--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
   flutter: '>=3.16.0'
 
 dependencies:
-  extended_image_library: ^4.0.1
+  extended_image_library:
+    git:
+      url: https://github.com/steven12138/extended_image_library_deps.git
   flutter:
     sdk: flutter
   meta: ^1.7.0
